Refactoring and optimization of unit tests